Alterações na estrutura de pastas

--- a/frontend-mobile/miaudote/package.json
+++ b/frontend-mobile/miaudote/package.json
@@ -20,5 +20,8 @@
     "@babel/core": "^7.0.0",
     "babel-preset-expo": "~8.0.0"
   },
-  "private": true
+  "private": true,
+  "rnpm":{
+    "assets":["./assets/fonts/"]
+  }
 }
