--- a/frontend-mobile/miaudote/package.json
+++ b/frontend-mobile/miaudote/package.json
@@ -12,16 +12,16 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-elements": "^1.2.7",
     "react-native-material-textfield": "^0.16.1",
     "react-native-modal": "^11.5.6",
-    "react-native-web": "~0.11.7"
+    "react-native-progress-steps": "^1.2.9",
+    "react-native-web": "~0.11.7",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "babel-preset-expo": "~8.0.0"
   },
-  "private": true,
-  "rnpm":{
-    "assets":["./assets/fonts/"]
-  }
+  "private": true
 }
