--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "express-jwt-permissions": "^1.3.3",
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
