--- a/frontend-mobile/miaudote/package.json
+++ b/frontend-mobile/miaudote/package.json
@@ -8,15 +8,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-navigation/native": "^5.1.3",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.2.4",
+    "@react-navigation/stack": "^5.2.19",
     "expo": "~36.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
+    "react-native-gesture-handler": "^1.6.1",
     "react-native-material-textfield": "^0.16.1",
     "react-native-modal": "^11.5.6",
     "react-native-progress-steps": "^1.2.9",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.7.0",
     "react-native-web": "~0.11.7",
     "styled-components": "^5.0.1"
   },
