--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
+    "nodemailer": "^6.4.6",
     "sequelize": "^5.21.5"
   },
   "devDependencies": {
