--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,17 @@
     "express-jwt": "^5.3.1",
     "express-jwt-permissions": "^1.3.3",
     "express-validator": "^6.4.0",
+    "firebase": "^7.14.6",
     "jsonwebtoken": "^8.5.1",
+    "md5": "^2.2.1",
+    "mime": "^2.4.6",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "nodemailer": "^6.4.6",
-    "sequelize": "^5.21.5"
+    "path": "^0.12.7",
+    "sequelize": "^5.21.5",
+    "fast-crc32c": "^2.0.0",
+    "firebase-admin": "^8.12.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2",
