Atualizações no envio de dados em cadastro de usuário

--- a/frontend-mobile/miaudote/package.json
+++ b/frontend-mobile/miaudote/package.json
@@ -10,15 +10,19 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.2.4",
-    "@react-navigation/stack": "^5.2.19",
+    "@react-navigation/stack": "^5.4.1",
+    "email-validator": "^2.0.4",
     "expo": "~36.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-masked-text": "^1.13.0",
     "react-native-material-textfield": "^0.16.1",
     "react-native-modal": "^11.5.6",
+    "react-native-paper": "^3.10.1",
     "react-native-progress-steps": "^1.2.9",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
