--- a/frontend-web/miaudote/package.json
+++ b/frontend-web/miaudote/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "jquery": "^3.5.1",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.0",
