--- a/frontend-mobile/miaudote/package.json
+++ b/frontend-mobile/miaudote/package.json
@@ -8,6 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/react-native-fontawesome": "^0.2.5",
+    "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.4.1",
@@ -27,6 +31,8 @@
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-svg": "9.13.3",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "styled-components": "^5.0.1"
   },
