--- a/frontend-web/miaudote/package.json
+++ b/frontend-web/miaudote/package.json
@@ -3,21 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.10.2",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
-    "bootstrap": "^4.5.0",
-    "jquery": "^3.5.1",
-    "materialize-css": "^1.0.0-rc.2",
-    "react": "^16.13.0",
-    "react-bootstrap": "^1.0.1",
-    "react-dom": "^16.13.0",
-    "react-input-mask": "^2.0.4",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.0",
-    "yup": "^0.29.1"
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
