--- a/frontend-web/miaudote/package.json
+++ b/frontend-web/miaudote/package.json
@@ -3,6 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns":"^2.0.1",
+    "@material-ui/pickers":"^3.2.10",
+    "date-fns":"^2.9.0",
+    "formik":"^2.1.3",
+    "lodash":"^4.17.15",
+    "moment":"^2.24.0",
+    "prop-types":"^15.7.2",
+    "yup":"^0.28.1",
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
