Telas iniciais de Pets

--- a/frontend-mobile/miaudote/app.json
+++ b/frontend-mobile/miaudote/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Blank Template",
+    "name": "Miaudote",
     "slug": "miaudote",
     "privacy": "public",
     "sdkVersion": "36.0.0",
