--- a/frontend-mobile/miaudote/package.json
+++ b/frontend-mobile/miaudote/package.json
@@ -8,15 +8,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/bellota": "^0.1.0",
     "@expo-google-fonts/poppins": "^0.1.0",
     "@expo-google-fonts/roboto": "^0.1.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/react-native-fontawesome": "^0.2.5",
+    "@react-native-community/cli": "^4.10.1",
     "@react-native-community/masked-view": "0.1.5",
+    "@react-native-community/slider": "^3.0.0",
     "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.4.1",
+    "axios": "^0.19.2",
     "email-validator": "^2.0.4",
     "expo": "~36.0.0",
     "expo-constants": "^9.1.1",
@@ -24,6 +28,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-dropdown-picker": "^3.1.6",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
