--- a/frontend-web/miaudote/package.json
+++ b/frontend-web/miaudote/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "clsx": "^1.1.1",
     "date-fns": "^2.9.0",
     "formik": "^2.1.3",
     "lodash": "^4.17.15",
