--- a/frontend-mobile/miaudote/package.json
+++ b/frontend-mobile/miaudote/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-native-fontawesome": "^0.2.5",
     "@react-native-community/cli": "^4.10.1",
     "@react-native-community/masked-view": "0.1.5",
+    "@react-native-community/picker": "^1.6.5",
     "@react-native-community/slider": "^3.0.0",
     "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/native": "^5.2.4",
@@ -25,6 +26,7 @@
     "expo": "~36.0.0",
     "expo-constants": "^9.1.1",
     "expo-font": "~8.0.0",
+    "expo-location": "^8.2.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
@@ -36,6 +38,7 @@
     "react-native-material-textfield": "^0.16.1",
     "react-native-modal": "^11.5.6",
     "react-native-paper": "^3.10.1",
+    "react-native-picker-select": "^7.0.0",
     "react-native-progress-steps": "^1.2.9",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.0",
