Consumo da api do IBGE para UF e cidades

--- a/frontend-mobile/package.json
+++ b/frontend-mobile/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.4.1",
+    "axios": "^0.19.2",
     "email-validator": "^2.0.4",
     "expo": "~36.0.0",
     "expo-constants": "^9.1.1",
@@ -34,6 +35,7 @@
     "react-native-material-textfield": "^0.16.1",
     "react-native-modal": "^11.5.6",
     "react-native-paper": "^3.10.1",
+    "react-native-picker-select": "^7.0.0",
     "react-native-progress-steps": "^1.2.9",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "0.6.0",
