--- a/frontend-mobile/package.json
+++ b/frontend-mobile/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/react-native-fontawesome": "^0.2.5",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/picker": "^1.6.5",
     "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.4.1",
@@ -24,6 +25,7 @@
     "expo": "~36.0.0",
     "expo-constants": "^9.1.1",
     "expo-font": "~8.0.0",
+    "expo-location": "^8.2.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
