--- a/frontend-mobile/package.json
+++ b/frontend-mobile/package.json
@@ -24,9 +24,11 @@
     "axios": "^0.19.2",
     "email-validator": "^2.0.4",
     "expo": "~36.0.0",
-    "expo-constants": "^9.1.1",
+    "expo-constants": "~8.0.0",
     "expo-font": "~8.0.0",
-    "expo-location": "^8.2.1",
+    "expo-image-picker": "~8.0.1",
+    "expo-location": "~8.0.0",
+    "expo-permissions": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
