--- a/frontend-web/miaudote/package.json
+++ b/frontend-web/miaudote/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.9.0",
     "formik": "^2.1.3",
     "lodash": "^4.17.15",
+    "material-ui-formik-components": "^0.7.1",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -23,6 +24,7 @@
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-text-mask": "^5.4.3",
     "yup": "^0.28.1"
   },
   "scripts": {
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.4.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
