--- a/frontend-web/miaudote/package.json
+++ b/frontend-web/miaudote/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^2.0.1",
-    "@material-ui/core": "^4.10.2",
+    "@date-io/date-fns": "^2.8.1",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
@@ -12,9 +12,9 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "clsx": "^1.1.1",
-    "date-fns": "^2.9.0",
-    "formik": "^2.1.3",
-    "lodash": "^4.17.15",
+    "date-fns": "^2.15.0",
+    "formik": "^2.1.5",
+    "lodash": "^4.17.20",
     "material-ui-formik-components": "^0.7.1",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
@@ -23,7 +23,7 @@
     "react-feather": "^2.0.8",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-text-mask": "^5.4.3",
     "yup": "^0.28.1"
   },
@@ -56,8 +56,8 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0",
     "prettier": "2.0.5"
   }
 }
